Changed Text Images back into texts on Info Page and Wallpaper Page. Edited some CSS as well.

--- a/WAStickersThirdParty/Info Page Detail/index.html
+++ b/WAStickersThirdParty/Info Page Detail/index.html
@@ -6,10 +6,10 @@
 	<body>
 		<div class='sk-ab sk-Info-Page-Detail'>
 			<div class='sk-asset sk-Untitled-1-01'></div>
-			<div class='sk-asset sk-Capsubeans-are-the-m'></div>
-			<div class='sk-asset sk-They-release-a-pink'></div>
-			<div class='sk-asset sk-When-in-doubt-Chill'></div>
-			<div class='sk-asset sk-Projects'></div>
+			<div class='sk-asset sk-Capsubeans-are-the-m'>Capsubeans are the most stress free creatures in the whole universe, who hopes to help people to relieve stress and anxiety through their silly acts.</div>
+            <div class='sk-asset sk-When-in-doubt-Chill'>"When in doubt,<br>Chill out!"</div>
+			<div class='sk-asset sk-They-release-a-pink'>They release a pink poop every time when they are stressed in order to keep themselves at the happiest state.</div>
+			<div class='sk-asset sk-Projects'>Projects</div>
 			<div class='sk-asset sk-Logo-01'></div>
 			<div class='sk-asset sk-ProfilePic_all-01'></div>
 			<div class='sk-asset sk-Capsubeans_MaskingTape_01_all'></div>
