--- a/WAStickersThirdParty/WallpaperPage Detail/index.html
+++ b/WAStickersThirdParty/WallpaperPage Detail/index.html
@@ -6,11 +6,11 @@
 	<body>
 		<div class='sk-ab sk-WallpaperPage-Detail'>
 			<div class='sk-asset sk-Group'>
-				<div class='sk-asset sk-lily_1'></div>
+				<div class='sk-asset sk-lily_1'><</div>
 				<div class='sk-asset sk-Jack_1'></div>
 				<div class='sk-asset sk-Untitled-1'></div>
-				<div class='sk-asset sk-The-wallpapers-are-s'></div>
-				<div class='sk-asset sk-Capsubeans-Wallpaper'></div>
+				<div class='sk-asset sk-The-wallpapers-are-s'>Press and save the wallpaper if you like it, but they are for personal use only! Enjoy!</div>
+<!--                <div class='sk-asset sk-Capsubeans-Wallpaper'></div>-->
 				<div class='sk-asset sk-charlie-1'></div>
 				<div class='sk-asset sk-Overrides-Cell-Add-Detail'></div>
 				<div class='sk-asset sk-Overrides-Cell-Add-Detail-Copy'></div>
