Finished modifying all the html and css for Info Page and Wallpaper Page. Added two new wallpapers.

--- a/WAStickersThirdParty/Info Page Detail/index.html
+++ b/WAStickersThirdParty/Info Page Detail/index.html
@@ -5,16 +5,23 @@
 	</head>
 	<body>
 		<div class='sk-ab sk-Info-Page-Detail'>
-			<div class='sk-asset sk-Untitled-1-01'></div>
-			<div class='sk-asset sk-Capsubeans-are-the-m'>Capsubeans are the most stress free creatures in the whole universe, who hopes to help people to relieve stress and anxiety through their silly acts.</div>
-            <div class='sk-asset sk-When-in-doubt-Chill'>"When in doubt,<br>Chill out!"</div>
-			<div class='sk-asset sk-They-release-a-pink'>They release a pink poop every time when they are stressed in order to keep themselves at the happiest state.</div>
+            <div class='sk-asset sk-Logo-01 logo'><img class="logo1" src="images/Logo-01.png" alt="Smiley face" height="43" width="206"><img class="logo2" src="images/Logo-01@2x.png" alt="Smiley face" height="43" width="206"><img class="logo3" src="images/Logo-01@3x.png" alt="Smiley face" height="43" width="206"></div>
+            <div class='sk-asset sk-ProfilePic'><img class="profile1 images" src="images/ProfilePic_all-01.png" alt="Smiley face" height="79" width="336"><img class="profile2 images" src="images/ProfilePic_all-01@2x.png" alt="Smiley face" height="79" width="336"><img class="profile3 images" src="images/ProfilePic_all-01@3x.png" alt="Smiley face" height="79" width="336"></div>
+            <div class='sk-asset sk-Capsubeans-are-the-m'><p>Capsubeans are the most stress free creatures in the whole universe, who hopes to help people to relieve stress and anxiety through their silly acts.</p></div>
+            <div class='sk-asset sk-Quote'>"When in doubt, Chill out!"</div>
+            <div class='sk-asset sk-author'>Jack Bean - Capsubeans</div>
+            
+            <div class='sk-asset sk-They-release-a-pink'><p>They release a pink poop every time when they are stressed in order to keep themselves at the happiest state.</p></div>
+            <div class='sk-asset sk-JackBalloon'><img class="jack_balloon1 images" src="images/JackBalloon.png" alt="Smiley face" height="199" width="179"><img class="jack_balloon2 images" src="images/JackBalloon@2x.png" alt="Smiley face" height="199" width="179"><img class="jack_balloon3 images" src="images/JackBalloon@3x.png" alt="Smiley face" height="199" width="179"></div>
+			
 			<div class='sk-asset sk-Projects'>Projects</div>
-			<div class='sk-asset sk-Logo-01'></div>
-			<div class='sk-asset sk-ProfilePic_all-01'></div>
-			<div class='sk-asset sk-Capsubeans_MaskingTape_01_all'></div>
-			<div class='sk-asset sk-AllToys_Cover_noText'></div>
-			<div class='sk-asset sk-Group'></div>
+			
+			<div class='sk-asset sk-Thann projectImg'><img class="thann1 images" src="images/Group.png" alt="Smiley face" height="155" width="316"><img class="jack_balloon2 images" src="images/Group@2x.png" alt="Smiley face" height="155" width="316"><img class="jack_balloon3 images" src="images/Group@3x.png" alt="Smiley face" height="155" width="316"></div>
+			
+			<div class='sk-asset sk-Toys projectImg'><img class="toys1 images" src="images/Toys.png" alt="Smiley face" height="182" width="316"><img class="toys2 images" src="images/Toys@2x.png" alt="Smiley face" height="182" width="316"><img class="toys3 images" src="images/Toys@3x.png" alt="Smiley face" height="182" width="316"></div>
+            
+            <div class='sk-asset sk-Mt projectImg'><img class="mt1 images" src="images/Mt.png" alt="Smiley face" height="116" width="316"><img class="mt2 images" src="images/Mt@2x.png" alt="Smiley face" height="116" width="316"><img class="mt3 images" src="images/Mt@3x.png" alt="Smiley face" height="116" width="316"></div>
+			
 		</div>
 	</body>
 </html>
